Rewrite queries w/ JdbCaesar, overhaul tables, change Env specifics